--- a/config.yaml
+++ b/config.yaml
@@ -16,7 +16,7 @@ theme: hugo-refresh
 DefaultContentLanguage: en
 
 ## Option to disable additional language in your site.
-# disableLanguages: ["ru"]
+disableLanguages: ["ru"]
 
 disableKinds: ["sitemap","RSS"]
 
@@ -102,9 +102,9 @@ params:
   homepage:
     # this options let you specify if you want a link to the homepage
     # it can be: "none", "menu", "footer" or "menu+footer"
-    # linkPosition: "footer" 
+    linkPosition: "menu+footer" 
     # this options let you specify the text of the link to the homepage
-    # linkText: "Homepage"  
+    linkText: "Home"  
     # option to specify the title in the homepage
     title: Daniel Nowak
     # option to specify the subtitle in the homepage
